tests/test170.rael
if (1 + 2) log 2
